--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
   ],
   "plugins": [
     [
+      "transform-object-rest-spread",
       "transform-react-remove-prop-types",
       {
         "mode": "wrap"
