--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.0",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -57,6 +58,10 @@
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "react-redux-simple-validate": "^1.1.7",
+    "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0",
     "react-github-corner": "^0.3.0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.17.0",
@@ -97,5 +102,8 @@
   "license": "MIT",
   "pre-push": [
     "test"
-  ]
+  ],
+  "dependencies": {
+    "load-google-maps-api": "^1.0.0"
+  }
 }
