ammend styles to be black and white themed

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.1",
     "gh-pages": "^0.12.0",
     "git-prepush-hook": "^1.0.2",
@@ -53,22 +53,25 @@
     "html-webpack-template": "^6.0.1",
     "jest": "^20.0.0",
     "json-loader": "^0.5.4",
+    "node-sass": "^4.5.3",
+    "prop-types": "^15.5.10",
     "purecss": "^0.6.2",
     "raw-loader": "^0.5.1",
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
+    "react-github-corner": "^0.3.0",
     "react-redux": "^5.0.5",
     "react-redux-simple-validate": "^1.1.7",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
-    "react-github-corner": "^0.3.0",
     "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.17.0",
     "sync-exec": "^0.6.2",
     "system-bell-webpack-plugin": "^1.0.0",
     "url-loader": "^0.5.8",
-    "webpack": "^2.5.1",
+    "webpack": "^2.7.0",
     "webpack-dev-server": "^2.4.5",
     "webpack-merge": "^4.1.0"
   },
